--- a/Drip/Layout/MainLayout.razor
+++ b/Drip/Layout/MainLayout.razor
@@ -14,6 +14,7 @@
     <div class="main-content">
         <CascadingValue Value="OpenApiDocument">
             <aside class="sidebar">
+                <div class="content-header">EXPLORER</div>
                 <Drip.Components.SideBar.AppSideBar />
             </aside>
             
